@@ -166,7 +166,33 @@ namespace scene
 		/** @see bindTargetAndRotation() */
 		virtual bool getTargetAndRotationBinding(void) const =0;
 
+		//! Writes attributes of the camera node
+		virtual void serializeAttributes(io::IAttributes* out, io::SAttributeReadWriteOptions* options=0) const
+		{
+			ISceneNode::serializeAttributes(out, options);
+
+			if (!out)
+				return;
+			out->addBool	("IsOrthogonal", IsOrthogonal );
+		}
+
+		//! Reads attributes of the camera node
+		virtual void deserializeAttributes(io::IAttributes* in, io::SAttributeReadWriteOptions* options=0)
+		{
+			ISceneNode::deserializeAttributes(in, options);
+			if (!in)
+				return;
+
+			if ( in->findAttribute("IsOrthogonal") )
+				IsOrthogonal = in->getAttributeAsBool("IsOrthogonal");
+		}
+
 	protected:
+
+		void cloneMembers(ICameraSceneNode* toCopyFrom)
+		{
+			IsOrthogonal = toCopyFrom->IsOrthogonal;
+		}
 
 		bool IsOrthogonal;
 	};
